--- a/index.css
+++ b/index.css
@@ -36,9 +36,32 @@
 }
 .res-img{
     width: 100%;
+    height: 295px;
 }
 
 .res-container{
     display: flex;
     flex-wrap: wrap;
+}
+
+.filter-btn{
+    margin: 10px;
+    cursor: pointer;
+}
+
+.shimmer-container{
+   display: flex; 
+   flex-wrap: wrap;
+}
+
+.shimmer-card{
+    width: 250px;
+    height: 400px;
+    background-color: #e8e4e8;
+    margin: 20px;
+}
+
+.login-btn{
+    padding: 0 20px;
+    background-color: #f7f7f7;
 }
