--- a/index.css
+++ b/index.css
@@ -44,9 +44,17 @@
     flex-wrap: wrap;
 }
 
+.filter{
+    display: flex;
+}
+
 .filter-btn{
     margin: 10px;
     cursor: pointer;
+}
+
+.search-box{
+    margin-right: 5px;
 }
 
 .shimmer-container{
