--- a/index.css
+++ b/index.css
@@ -73,3 +73,16 @@
     padding: 0 20px;
     background-color: #f7f7f7;
 }
+.error{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.error img{
+    width: 20%;
+}
+a{
+    text-decoration: none;
+    color: black;
+}
