--- a/index.css
+++ b/index.css
@@ -1,93 +1,3 @@
-.header{
-    display: flex;
-    justify-content: space-between;
-    border: 1px solid black;
-}
-.logo{
-    width: 120px;
-}
-
-.nav-items > ul{
-    display: flex;
-    padding: 0px 20px;
-    list-style-type: none;
-}
-
-.nav-items> ul > li{
-    padding: 10px;
-    margin: 10px;
-    font-size: 24px;
-}
-
-.search{
-    padding: 10px;
-}
-
-.res-card{
-    width:250px;
-    padding: 5px;
-    margin: 20px;
-    background-color: #e8e4e8;
-    word-break: break-all;
-}
-.res-card:hover{
-    cursor: pointer;
-    border: 1px solid black;
-}
-.res-img{
-    width: 100%;
-    height: 295px;
-}
-
-.res-container{
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.filter{
-    display: flex;
-}
-
-.filter-btn{
-    margin: 10px;
-    cursor: pointer;
-}
-
-.search-box{
-    margin-right: 5px;
-}
-
-.shimmer-container{
-   display: flex; 
-   flex-wrap: wrap;
-}
-
-.shimmer-card{
-    width: 250px;
-    height: 400px;
-    background-color: #e8e4e8;
-    margin: 20px;
-}
-
-.login-btn{
-    padding: 0 20px;
-    background-color: #f7f7f7;
-}
-.error{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-.error img{
-    width: 20%;
-}
-a{
-    text-decoration: none;
-    color: black;
-}
-
-.user-card{
-    padding: 10px;
-    border: 1px solid black;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
